# udi-system

./: .env.prod.example  .gitignore  COMPONENT_ARCHITECTURE.md  README.md  SOURCE_MAP.md  docker-compose.prod.yml  docker-compose.yml  更新日志v1.2.md
Docs/: PostgreSQL.md  SOURCE_MAP.md  更新日志v1.0.md  更新日志v2.0.md  更新日志v2.1.md  更新日志v3.0.md  更新日志v3.6.1.md  更新日志v3.6.md  更新日志v3.8.md  更新日志v3.9.1.md  更新日志v3.9.md  更新日志v4.0.md
Docs/Plan/: v2.2实施计划.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_label_batch.py  0003_add_label_template.py  0004_add_system_config.py  0005_add_batch_template_snapshot.py  0006_add_user_auth_fields.py  0007_decouple_auth_owner_id.py  0008_add_template_owner_index.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  batches.py  helpers.py  labels.py  router.py  system.py  templates.py
backend/app/api/v1/: health.py
backend/app/core/: auth_deps.py  config.py
backend/app/db/: fastapi_users_config.py  models.py  redis.py  session.py  user_manager.py
backend/app/schemas/: batch.py  label.py  template.py
backend/app/services/: auth_service.py  barcode_gen.py  email_service.py  gs1_engine.py
backend/data/: udi.db
backend/tests/: test_api_helpers.py  test_gs1_engine.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/hooks/: useAdmin.ts  useBatchUpload.ts  useHiddenSystemTemplates.ts  useLabelBatches.ts  useLabelHistory.ts  useLabelTemplates.ts  useLabels.ts  useRequireAuth.ts  useSystemTemplateOverrides.ts  useUdiGenerator.ts
frontend/lib/: api.ts  auth.ts  batchExporter.ts  canvasToSvg.ts  dateUtils.ts  excelParser.ts  gs1.ts  gs1Utils.ts  preview-templates.ts  segmentEngine.ts  svgTemplates.ts  systemTemplates.ts
frontend/stores/: canvasStore.ts
nginx/: nginx.conf
(+53 files in other folders)
