[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=10.0.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "treepoem>=3.28.0",
    "uvicorn>=0.41.0",
]
